tests/rosetta/transpiler/FS/call-a-function-9.error
compile: exit status 1
F# Compiler for F# 4.0 (Open Source Edition)
Freely distributed under the Apache 2.0 Open Source License

/workspace/mochi/tests/rosetta/transpiler/FS/call-a-function-9.fs(3,1): warning FS0221: The declarations in this file will be placed in an implicit module 'Call-a-function-9' based on the file name 'call-a-function-9.fs'. However this is not a valid F# identifier, so the contents will not be accessible from other files. Consider renaming the file or adding a 'module' or 'namespace' declaration at the top of the file.

/workspace/mochi/tests/rosetta/transpiler/FS/call-a-function-9.fs(63,55): error FS0001: This expression was expected to have type
    int    
but here has type
    obj    
